--- a/src/styles/FrequentlyAsked.css
+++ b/src/styles/FrequentlyAsked.css
@@ -61,6 +61,7 @@
     /* padding: 30px 0; */
     border-bottom: 1px solid rgba(0, 0, 0, .1);
     cursor: pointer;
+    /* height: 80px; */
 }
 
 .queries-column h6 {
@@ -85,8 +86,18 @@
     transition: max-height 0.7s ease-in-out;
 }
 
+.background-container {
+    background: #fafafa;
+    height: 475px;
+    content: "";
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+    margin-top: -60px;
+}
+
 @media only screen 
-and (max-width : 390px) {
+and (max-width : 430px) {
   /* Styles */
   .frequently-asked-wrapper {
     margin-right: 15px;
