--- a/src/styles/HelpDeskPlans.css
+++ b/src/styles/HelpDeskPlans.css
@@ -69,11 +69,24 @@
     flex: 0 0 100%;
     max-width: 100%;
     display: flex;
+    /* text-decoration: underline;
+     */
+     font-size: 16px;
+     color: #323643;
+     font-weight: 300;
+
+     /* color: #323643;
+    border-bottom: .5px dotted #323643; */
 }
+
 .table-title {
     width: 31%;
 }
 
+.table-title p{
+  color: #323643;
+  /* border-bottom: .5px dotted #323643; */
+}
 .table-column {
     width: 16%;
     font-size: 16px;
@@ -128,6 +141,10 @@
     width: 100%;
     justify-content: space-between;
 }
+
+/* .plain-row:hover {
+  font-size: 100px;
+} */
 
 .row-container-header {
     display: flex;
@@ -184,8 +201,22 @@
 .plain-row:hover {
     cursor: pointer;
     color: red;
-    background-color: #d0d0d0 !important; /* Darker shade of f7f7f7 */
+    background-color: #d0d0d0 !important; 
   }
+  .plain-row .row-container-header-table .header-container-row-table:hover {
+    background: #000;
+  }
+
+  .table-title p a {
+    color: #323643;
+      border-bottom: .5px dotted #323643;
+  }
+
+  .table-title p a:hover {
+    color: red;
+    cursor: pointer;
+  }
+
 
 
 @media only screen 
@@ -216,6 +247,9 @@ and (max-width : 430px) {
   }
 
   .table-column-tick {
+    width: 48%;
+  }
+  .table-column-no-img {
     width: 48%;
   }
   .table-column-dash{
